# eigen_checks

./: CMakeLists.txt  README.md  package.xml
cmake/: eigen_checks-extras.cmake.in
include/eigen-checks/: entrypoint.h  glog.h  gtest.h
include/eigen-checks/internal/: gtest-equal.h  traits.h
test/: test_glog-equal-double.cc  test_glog-equal.cc  test_glog-near.cc  test_glog-zero-sized-types.cc  test_glog-zero.cc  test_gtest-equal-double.cc  test_gtest-equal.cc  test_gtest-near.cc  test_gtest-zero-sized-types.cc  test_gtest-zero.cc  test_gtest_equal_double.cc  test_helper.h
